--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ ul li::before{
   height: 25px;
   width: 25px;
   border-radius:50%;
-  background-image: url(/images/unchecked.png);
+  background-image: url(unchecked.png);
   background-size: cover;
   background-position: center;
   top: 12px;
@@ -103,7 +103,7 @@ ul .checked::before{
   height: 25px;
   width: 25px;
   border-radius:50%;
-  background-image: url(/images/checked.png);
+  background-image: url(checked.png);
   background-size: cover;
   background-position: center;
   top: 12px;
